# ufind

./: Cargo.toml  LICENSE  build.rs
scripts/completion/: _ufind  _ufind.ps1  ufind.bash-completion  ufind.fish
src/: app.rs  main.rs
src/digraph/: data.rs  mod.rs
